2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "io_safe_output" for
	arrays, now into the function call other function with the name
	"io_safe_output_array".
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.constans.php: fixed a lot
	of things about simple value and derivates.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operatoin/tree.php: Deleted debug trace, sorry ;)

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operatoin/tree.php: Fixed a bug related to html tag id
	with strange characters.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Include functions_gis.php file that
	was missing.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_agents.php,
	operation/tree.php: Improved performance for
	tree view module tab.

2012-06-11  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/users/configure_user.php: Removed 'add extra policies'.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_agents.php,
	operation/tree.php: Improved tree view for module groups.

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: cleaned source code style.
	
	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js: fixed the set
	status to items when change somethings that module or method to get
	status that agent to module status item.

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	